GNOME Bugzilla – Bug 613988
Compile error on DirectFB backend due to missing of gdk_keymap_add_virtual_modifiers
Last modified: 2010-04-09 16:17:22 UTC
Created attachment 157144 [details] [review] Correct two compiling errors : gdk_keymap_add_virtual_modifiers and gdk_keymap_map_virtual_modifiers Like the bug 605185, there is a bug when compiling on DirectFB backend due to missing of gdk_keymap_map_virtual_modifiers In attachment there is a patch for the two bugs. I'm not sure it will be in a correct format because using ltib to generate it. Please check it before using it.
This problem has been fixed in our software repository. Fixed in commit eb7121c4e6dc1bd124fc2410fc9f65a95c1aa302 The fix will go into the next software release. Thank you for your bug report.