[directfb] Fix compile error on DirectFB backend.

Add a stub for gdk_keymap_add_virtual_modifiers()

Fixes https://bugzilla.gnome.org/show_bug.cgi?id=613988