gdk/directfb/gdkkeys-directfb.c
@@ -1998,6 +1998,13 @@ gdk_keymap_lookup_key (GdkKeymap          *keymap,
 	return 0;
 }
 
+void
+gdk_keymap_add_virtual_modifiers (GdkKeymap       *keymap,
+                                  GdkModifierType *state)
+{
+	g_warning ("gdk_keymap_add_virtual_modifiers unimplemented \n");
+}
+
 gboolean
 gdk_keymap_map_virtual_modifiers (GdkKeymap       *keymap,
                                   GdkModifierType *state)
